--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -679,7 +679,9 @@ $btn-mb: 0.5rem;
   overflow-y: auto;
   width: $sidebar-width;
   z-index: 99;
-  background: var(--sidebar-bg);
+  background: url("/assets/img/background.jpg");
+  background-size: auto;
+  background-position: center;
   border-right: 1px solid var(--sidebar-border-color);
 
   /* Hide scrollbar for Chrome, Safari and Opera */
